--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -1,15 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-pt">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        
+        body{
+            height: 100vh;
+            background-color: black;
+            background-image: url('imagens/wallpaper002.jpg');
+            background-position: center center;
+            background-repeat: no-repeat;
+            background-size: contain;
+        }
+
+        main{
+            background-color: white;
+            width: 400px;
+            padding: 10px;
+            margin: auto;
+            border: 1px solid darkblue;
+            border-radius: 15px;
+
+        }
     </style>
 </head>
 <body>
-    
+    <main>
+        <h1>Teste de Imagem de Fundo</h1>
+        <p>
+            Teste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de Fundo
+        </p>
+    </main>
 </body>
 </html>
