--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -4,15 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo da tela</title>
     <style>
         body{
+           
             height: 100vh;
+             /*
             background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
             background-repeat: no-repeat;
-            background-size: contain;
+            background-size: cover;
+            background-attachment: fixed;
+            */
+
+            /* Shorthand: background-color > image > position > repeat > [size] > attachment
+            */
+            
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
+            background-size: cover;
         }
 
         main{
@@ -22,7 +32,6 @@
             margin: auto;
             border: 1px solid darkblue;
             border-radius: 15px;
-
         }
     </style>
 </head>
@@ -30,7 +39,7 @@
     <main>
         <h1>Teste de Imagem de Fundo</h1>
         <p>
-            Teste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de Fundo
+            Teste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de Fundo Teste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de Fundo Teste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de Fundo Teste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de FundoTeste de Imagem de Fundo
         </p>
     </main>
 </body>
