--- a/exercicios/ex022/fundo007.html
+++ b/exercicios/ex022/fundo007.html
@@ -10,7 +10,7 @@
             position: relative;
             height: 97vh;
             padding: 10;
-            background-color: blue;
+            background-color: rgb(255, 145, 0);
             background-image: url('imagens/target001.png');
             background-size: 100% 100%;
         }
@@ -19,7 +19,7 @@
             position: absolute;
             height: 100px;
             width: 200px;
-            background-color: greenyellow;
+            background-color: rgb(241, 255, 47);
             background-image: url('imagens/target001.png');
             background-size: 100% 100%;
 
