--- a/exercicios/Teste_Menu_Lateral/index.html
+++ b/exercicios/Teste_Menu_Lateral/index.html
@@ -48,6 +48,30 @@
     </div>
     <div class="div_2">
         <h1>DIV2</h1>
+        <ul>
+            <li><a href="#"></a>Opcão_1</li>
+                <ul>
+                    <li><a href="#"></a>Opcão_1a</li>
+                    <li><a href="#"></a>Opcão_1b</li>
+                    <li><a href="#"></a>Opcão_1c</li>
+                </ul>
+        </ul>
+        <ul>
+            <li><a href="#"></a>Opcão_2</li>
+                <ul>
+                    <li><a href="#"></a>Opcão_2a</li>
+                    <li><a href="#"></a>Opcão_2b</li>
+                    <li><a href="#"></a>Opcão_2c</li>
+                </ul>
+        </ul>
+        <ul>
+            <li><a href="#"></a>Opcão_3</li>
+                <ul>
+                    <li><a href="#"></a>Opcão_3a</li>
+                    <li><a href="#"></a>Opcão_3b</li>
+                    <li><a href="#"></a>Opcão_3c</li>
+                </ul>
+        </ul>
     </div>
     <div class="div_3">
         <h1>DIV3</h1>
